@@ -3,4 +3,6 @@ package com.kekecreations.arts_and_crafts.core.platform.services;
 public interface ConfigHelper {
 
     boolean areDyedFlowerPotsEnabled();
+
+    boolean areChalkSticksEnabled();
 }
