@@ -8,6 +8,7 @@ public class ForgeConfig {
     public static final ForgeConfigSpec SPEC;
 
     public static final ForgeConfigSpec.BooleanValue ENABLE_DYED_FLOWER_POTS;
+    public static final ForgeConfigSpec.BooleanValue ENABLE_CHALK_STICKS;
 
 
     static {
@@ -19,6 +20,10 @@ public class ForgeConfig {
         ENABLE_DYED_FLOWER_POTS = BUILDER
                 .comment("Allows flower pots to be dyed when true. Default value: true")
                 .define(" ENABLE_DYED_FLOWER_POTS", true);
+
+        ENABLE_CHALK_STICKS = BUILDER
+                .comment("Should Chalk Sticks be enabled? Default value: true")
+                .define(" ENABLE_CHALK_STICKS", true);
 
 
         BUILDER.pop();
